[package]
name = "hgrep"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.5.21", features = ["derive"]}
regex = "1.6.0"
serde = {version="1.0.143", features=["derive"]}
serde_json = "1.0.83"
